--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm run workbox && node server.js",
+    "start": "node server.js",
     "workbox": "workbox generateSW workbox-config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite-server": "lite-server"
